--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -23,8 +23,10 @@ p {
 }
 
 header{
-  padding: 10px 200px 10px 10px;
-  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 10px 10px 10px 10px;
 }
 
 .title {
